--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     
                     <div class="form-actions">
                         <button type="button" class="button secondary" id="cancel-progress-pic">Cancel</button>
-                        <button type="submit" class="button primary" id="save-progress-pic">Save Photo</button>
+                        <button type="button" class="button primary" id="save-progress-pic">Save Photo</button>
                     </div>
                 </form>
             </div>
