--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                     
                     <div class="form-group">
                         <label for="pic-upload">Upload Picture</label>
-                        <input type="file" id="pic-upload" accept="image/*" capture="camera" required>
+                        <input type="file" id="pic-upload" accept="image/*" required>
                         <div class="upload-preview">
                             <img id="upload-preview-img" src="" alt="Preview" class="hidden">
                             <div id="upload-placeholder" class="upload-placeholder">
