--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                     </div>
                 </div>
                 
-                <button class="button secondary full-width" id="back-to-pics">Back to All Pictures</button>
+                <button type="button" class="button secondary full-width" id="back-to-pics">Back to All Pictures</button>
             </div>
         </div>
     </div>
