--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="LiftMate">
-    <link rel="apple-touch-icon" href="LiftMate.png">
-    <link rel="apple-touch-startup-image" href="LiftMate.png">
+    <link rel="apple-touch-icon" href="icons/icon-base.svg">
+    <link rel="apple-touch-startup-image" href="icons/icon-base.svg">
     <link rel="manifest" href="manifest.json">
     <title>LiftMate: Gym Tracking Tool</title>
     <link rel="stylesheet" href="css/styles.css">
