--- a/index.html
+++ b/index.html
@@ -553,30 +553,37 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
         <div class="mobile-nav">
             <button class="nav-button active" data-tab="current-workout">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-dumbbell nav-icon"></i>
                 <span class="nav-text">Workout</span>
             </button>
             <button class="nav-button" data-tab="statistics">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-chart-bar nav-icon"></i>
                 <span class="nav-text">Stats</span>
             </button>
             <button class="nav-button" data-tab="progress">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-chart-line nav-icon"></i>
                 <span class="nav-text">Progress</span>
             </button>
             <button class="nav-button" data-tab="exercises">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-running nav-icon"></i>
                 <span class="nav-text">Exercises</span>
             </button>
             <button class="nav-button" data-tab="history">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-history nav-icon"></i>
                 <span class="nav-text">History</span>
             </button>
             <button class="nav-button" data-tab="goals">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-bullseye nav-icon"></i>
                 <span class="nav-text">Goals</span>
             </button>
             <button class="nav-button" data-tab="progress-pics">
                 <span class="nav-indicator"></span>
+                <i class="fas fa-camera nav-icon"></i>
                 <span class="nav-text">Pics</span>
             </button>
         </div>
