--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <link rel="stylesheet" href="css/active-workout.css">
     <link rel="stylesheet" href="css/date-input-dark.css">
     <link rel="stylesheet" href="css/d3-charts.css">
+    <link rel="stylesheet" href="css/ios-fixes-template-button.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
@@ -1066,5 +1067,8 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     
     <!-- Main application - Loads after all modules are available -->
     <script src="js/app.js"></script>
+    
+    <!-- Template button fix for iOS -->
+    <script src="js/template-button-fix.js"></script>
 </body>
 </html>
