--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <link rel="stylesheet" href="css/date-input-dark.css">
     <link rel="stylesheet" href="css/d3-charts.css">
     <link rel="stylesheet" href="css/ios-fixes-template-button.css">
+    <link rel="stylesheet" href="css/start-button-fix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
