--- a/index.html
+++ b/index.html
@@ -1071,5 +1071,8 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     
     <!-- Template button fix for iOS -->
     <script src="js/template-button-fix.js"></script>
+    
+    <!-- iOS scrolling fixes for fullscreen mode -->
+    <script src="js/ios-scroll-fix.js"></script>
 </body>
 </html>
