--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="LiftMate">
-    <link rel="apple-touch-icon" href="https://cdn.glitch.global/c3e5b6a5-9e98-4c47-a8f0-14ab28d462f2/android-chrome-192x192.png">
-    <link rel="apple-touch-startup-image" href="https://cdn.glitch.global/c3e5b6a5-9e98-4c47-a8f0-14ab28d462f2/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-152x152.png">
+    <link rel="apple-touch-startup-image" href="icons/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/icon-72x72.png">
     <link rel="manifest" href="manifest.json">
     <title>LiftMate: Gym Tracking Tool</title>
     <link rel="stylesheet" href="css/styles.css">
