--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="LiftMate">
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-152x152.png">
-    <link rel="apple-touch-startup-image" href="icons/icon-512x512.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-72x72.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/icon-72x72.png">
+    <link rel="apple-touch-icon" href="LiftMate.png">
+    <link rel="apple-touch-startup-image" href="LiftMate.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="LiftMate.png">
     <link rel="manifest" href="manifest.json">
     <title>LiftMate: Gym Tracking Tool</title>
     <link rel="stylesheet" href="css/styles.css">
