--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <link rel="stylesheet" href="css/fa-icon-color-fix.css">
     <link rel="stylesheet" href="css/title-icon-fa-position-fix.css">
     <link rel="stylesheet" href="css/app-title-spacing-fix.css">
+    <link rel="stylesheet" href="css/pics-nav-button-fix.css">
+    <link rel="stylesheet" href="css/confirmation-dialog-fix.css">
+    <link rel="stylesheet" href="css/progress-chart-fix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
     
