--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
             }
         }
     </style>
+    <!-- iPhone dark mode header position fixes -->
+    <link rel="stylesheet" href="css/ios-header-fixes.css">
 </head>
 <body>
     <!-- SVG Icon Sprite - Inline for better compatibility -->
@@ -1368,6 +1370,7 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     
     <!-- iOS scrolling fixes for fullscreen mode -->
     <script src="js/ios-scroll-fix.js"></script>
+    <script src="js/ios-header-fixes.js"></script>
     
     <!-- Direct SVG icon replacement -->
     <script src="js/direct-icons.js"></script>
