--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <link rel="stylesheet" href="css/confirmation-dialog-fix.css">
     <link rel="stylesheet" href="css/progress-chart-fix.css">
     <link rel="stylesheet" href="css/origami-unfold.css">
+    <link rel="stylesheet" href="css/template-form-fix.css">
+    <link rel="stylesheet" href="css/template-drag-drop.css">
+    <link rel="stylesheet" href="css/ios-progress-graph-fix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
     
