--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Then open in your browser at: http://localhost:8000 or the appropriate port
     <link rel="stylesheet" href="css/template-form-fix.css">
     <link rel="stylesheet" href="css/template-drag-drop.css">
     <link rel="stylesheet" href="css/ios-progress-graph-fix.css">
+    <link rel="stylesheet" href="css/ios-icon-fix.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
     
